feat: add calculator with completed expressions
